--- a/style.css
+++ b/style.css
@@ -9,3 +9,126 @@ html, body {
 body {
     font-family: verdana, arial, helvetica, sans-serif;
 }
+.nav{
+    text-align: center;
+    background-color: yellow;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border: 1px;
+    border-color: #e7e7e7;
+}
+.nav li{
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: inline;
+}
+.nav a{
+    text-decoration: none;
+    color: black;
+
+}
+.main{
+    width: 900px;
+    height: 900px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: ;
+}
+.footer img {
+display: inline;
+}
+.footer li{
+    display: inline;
+}
+.footer{  background-color: #FFD700;
+    position:absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+    text-align: center;
+
+}
+.me img{
+    float:left;
+    height: 60px;
+    width: 60px;
+    padding-right: 10px;
+}
+.cv ul{
+    padding-left: 0px;
+}
+.cv li{
+    list-style-type: none;
+    text-align: justify;
+    border-bottom:1px ;
+    border-color:yellow;
+}
+.me {
+    text-align: justify;
+}
+.img{
+    float: right;
+    padding-right: 10px;
+}
+.courses img{
+    float:left;
+    width: 170px;
+    height: 210px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+.courses li{
+    list-style-type: none;
+    width: 900px;
+    height: 210px;
+}
+.courses  p{
+    text-align: justify;
+    margin-top: 1px;
+}
+.courses h4{
+    margin-top: 1px;
+}
+.label,input{
+    display: block;
+    width: 600px;
+    margin-top: 5px;
+    font-size: 20px;
+}
+.input{
+    border-color: #FFD700;
+    border: 1px;
+
+}
+.input[type=button]{
+    height: 40px;
+    font-size: 20px;
+}
+.input[type=textarea]{
+    width: 600px;
+    height: 400px;
+    border-color: #FFD700;
+    border: 1px;
+    margin-top: 5px;
+}
+.form{
+    margin-top: 100px;
+    margin-left: 250px;
+}
+.form p{
+    font-size: 20px;
+}
+.calendar td,tr{
+    border: 1px;
+    border-color: black;
+}
+.calendar{
+    margin-top: 100px;
+}
+.thead{
+    background-color:black ;
+    color: #e7e7e7;
+}
